# django-finnotech

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  setup.py
finnotech/: __init__.py  _version.py  app_settings.py  apps.py  constants.py  decorators.py  forms.py  mixins.py  urls.py  utils.py  views.py
finnotech/pyfinnotech/: __init__.py  api.py  const.py  exceptions.py  responses.py  token.py
finnotech/pyfinnotech/tests/: helper.py  mock_api_server.py  test_card_to_iban.py  test_card_validation.py  test_client_credential_token.py  test_iban_validation.py  test_national_id_verification.py
finnotech/templates/: clientauth_form.html  finnotech_form.html  sms_auth.html
finnotech/templates/finnotech/: base.html  clientauth_form.html  finnotech_form.html
