[metadata]
name = django-finnotech
version = attr: finnotech.__version__
url = https://github.com/saman-zand-h/django-finnotech
author = Saman Zand Haghighi
author_email = samanzandh@gmail.com
description = An api-client for using finnotech that uses django caches for handling timed requests.
license = MIT License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 3.2
    django-crispy-forms >= 2.0